# rust-xml-schema

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: bigfloat.rs  generated.rs  generated2.rs  lib.rs  macros.rs  main.rs  names.rs  parser.rs  parser_generator.rs  primitives.rs  processor.rs  round0_parser.rs  round0_parser_generator.rs  support.rs  test_generated.rs  test_generated2.rs  test_generated2_schema.rs  test_generated_schema.rs  test_parser.rs  test_parser_schema.rs  xml_utils.rs
tests/: generated.rs  po.rs
xml-schema/: Cargo.toml
xml-schema-tests/: Cargo.toml  build.rs
xml-schema-tests/src/: lib.rs  po.rs
xml-schema-tests/tests/: po.rs
xml-schema/src/: asts.rs  attrs.rs  attrs_bubble_up.rs  lib.rs  lift_attrs.rs  macros.rs  name_allocator.rs  names.rs  parser.rs  parser_generator.rs  primitives.rs  processor.rs  processor2.rs  support.rs  test_parser.rs  test_parser_schema.rs  toplevel.rs  ungroup.rs  utils.rs  xml_utils.rs
